[package]
name = "core"
version = "0.1.0"
authors = ["The Distributary Developers"]

[dependencies]
bincode = "1.0.0"
rusqlite = "0.13.0"
arccstr = "1.1.0"
fnv = "1.0.5"
serde_derive = "1.0.8"
rahashmap = "0.2.6"
rand = "0.4.2"

# need features
chrono = { version = "0.4.0", features = ["serde"] }
petgraph = { version = "0.4.11", features = ["serde-1"] }
serde = { version = "1.0.8", features = ["rc"] }
serde_json = "1.0.2"

# git deps
nom-sql = { git = "https://github.com/ms705/nom-sql.git", rev = "f363a641308aae4d3e9f1104fbc56911bd851395" }
