[package]
name = "core"
version = "0.1.0"
authors = ["The Distributary Developers"]

[dependencies]
bincode = "1.0.0"
arccstr = "1.1.0"
fnv = "1.0.5"
itertools = "0.7.2"
serde_derive = "1.0.8"
rahashmap = "0.2.6"
rand = "0.4.2"

# need features
chrono = { version = "0.4.0", features = ["serde"] }
petgraph = { version = "0.4.11", features = ["serde-1"] }
serde = { version = "1.0.8", features = ["rc"] }

# git deps
nom-sql = { git = "https://github.com/ms705/nom-sql.git", rev = "f363a641308aae4d3e9f1104fbc56911bd851395" }

[dependencies.rocksdb]
git = "https://github.com/ekmartin/rust-rocksdb.git"
features = ["lz4"]
rev = "7e95a0771b7d146d5048711c8fd2e250494f10a1"
