[package]
name = "mir"
version = "0.1.0"
authors = ["The Distributary Developers"]

[dependencies]
regex = "0.2.2"
slog = "2.0.6"

# git deps
nom_sql = { git = "https://github.com/ekmartin/nom-sql.git", branch = "nom-upgrade" }

# local deps
core = { path = "../core" }
dataflow = { path = "../dataflow" }
